--- a/rc-task/package.json
+++ b/rc-task/package.json
@@ -5,15 +5,17 @@
   "dependencies": {
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
+    "autosuggest-highlight": "3.1.1",
     "downshift": "^3.2.12",
     "install": "^0.13.0",
+    "leaflet": "^1.3.4",
     "lodash": "^4.17.15",
     "npm": "^6.11.2",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-autosuggest": "9.4.3",
     "react-dom": "^16.9.0",
     "react-leaflet": "^2.0.1",
-    "leaflet": "^1.3.4",
     "react-scripts": "3.1.1",
     "reactstrap": "^6.4.0"
   },
